crates/xlate/tests/snapshots/golden_matrix__output_strict_missing_additional_properties__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Give a city."
        }
      ]
    }
  ],
  "text": {
    "format": {
      "type": "json_schema",
      "name": "open",
      "schema": {
        "properties": {
          "city": {
            "type": "string"
          }
        },
        "required": [
          "city"
        ],
        "type": "object",
        "additionalProperties": false
      },
      "strict": true
    }
  },
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
output.schema=rewritten
